--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "ag-grid-angular": "^27.1.1",
     "ag-grid-community": "^27.1.0",
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.0",
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
