--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-saver": "^2.0.5",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.2",
+    "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
