--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ag-grid-angular": "^27.1.1",
     "ag-grid-community": "^27.1.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "file-saver": "^2.0.5",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.2",
