--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "file-saver": "^2.0.5",
+    "ng2-currency-mask": "^13.0.3",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.2",
     "quill": "^1.3.7",
