--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "bootstrap-icons": "^1.8.1",
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
+    "ng2-currency-mask": "^13.0.3",
     "ng2-pdf-viewer": "^9.0.0",
     "ngx-extended-pdf-viewer": "^13.0.0",
-    "ng2-currency-mask": "^13.0.3",
     "primeicons": "^5.0.0",
     "primeng": "^13.4.0",
     "quill": "^1.3.7",
@@ -44,6 +44,7 @@
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/quill": "^2.0.9",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
