--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.1",
+    "@swimlane/ngx-charts": "^20.1.0",
+    "@types/d3": "^7.4.0",
     "ag-grid-angular": "^27.1.1",
     "ag-grid-community": "^27.1.0",
     "bootstrap": "^5.1.3",
