--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap-icons": "^1.8.1",
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
+    "moment": "^2.29.3",
     "ng2-currency-mask": "^13.0.3",
     "ng2-pdf-viewer": "^9.0.0",
     "ngx-extended-pdf-viewer": "^13.0.0",
