correção do interceptor e do toast

--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": [
               "node_modules/quill/dist/quill.js"
@@ -105,7 +105,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
