--- a/angular.json
+++ b/angular.json
@@ -34,8 +34,9 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              
+              "node_modules/flag-icon-css/css/flag-icons.min.css",
               "src/styles.scss"
+              
             ],
             "scripts": [
               "node_modules/quill/dist/quill.js"
@@ -105,7 +106,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/flag-icon-css/css/flag-icons.min.css"
             ],
             "scripts": []
           }
