--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "file-saver": "^2.0.5",
+    "flag-icon-css": "^4.1.7",
     "fs": "^0.0.1-security",
     "moment": "^2.29.3",
     "ng2-currency-mask": "^13.0.3",
