--- a/package.json
+++ b/package.json
@@ -33,10 +33,15 @@
     "file-saver": "^2.0.5",
     "flag-icon-css": "^4.1.7",
     "fs": "^0.0.1-security",
+    "html-to-pdfmake": "^2.3.11",
+    "html2canvas": "^1.4.1",
+    "html2pdf": "^0.0.11",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.3",
     "ng2-currency-mask": "^13.0.3",
     "ng2-pdf-viewer": "^9.0.0",
     "ngx-extended-pdf-viewer": "^13.0.0",
+    "pdfmake": "^0.2.5",
     "primeicons": "^5.0.0",
     "primeng": "^13.4.0",
     "quill": "^1.3.7",
