--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2d88adbc-deaf-4b66-bb10-fb4c2a4dfd86"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
