--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,9 @@
           "defaultConfiguration": "development",
           "options": {
             "host": "0.0.0.0",
-            "port": 5000
+            "port": 5000,
+            "browserTarget": "move-safe:build",
+            "proxyConfig": "src/proxy.conf.json"
           }
         },
         "extract-i18n": {
