--- a/angular.json
+++ b/angular.json
@@ -91,9 +91,8 @@
           "defaultConfiguration": "development",
           "options": {
             "host": "0.0.0.0",
-            "port": 5000,
-            "browserTarget": "move-safe:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "port": 5000
+            
           }
         },
         "extract-i18n": {
