--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/d3": "^7.4.0",
     "ag-grid-angular": "^27.1.1",
     "ag-grid-community": "^27.1.0",
+    "angular-plotly.js": "^4.0.4",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "file-saver": "^2.0.5",
@@ -42,6 +43,7 @@
     "ng2-pdf-viewer": "^9.0.0",
     "ngx-extended-pdf-viewer": "^13.0.0",
     "pdfmake": "^0.2.5",
+    "plotly.js-dist-min": "^2.12.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.4.0",
     "quill": "^1.3.7",
@@ -56,6 +58,7 @@
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/plotly.js-dist-min": "^2.3.0",
     "@types/quill": "^2.0.9",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
