--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,10 +5,11 @@ env:
 phases:
   install:
     runtime-versions:
-      nodejs: 16
+      nodejs: 16  
     commands:
       - echo install process started
-      - npm install && npm install -g @angular/cli
+      - npm install -y npm@latest 
+      - npm install -g @angular/cli
   build:
     commands:
       - echo build process started now
