--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,11 +5,12 @@ env:
 phases:
   install:
     runtime-versions:
-      nodejs: 16  
+      nodejs: 15  
     commands:
       - echo install process started
       - npm install -y npm@latest 
       - npm install -g @angular/cli
+      - rm package-lock.json
   build:
     commands:
       - echo build process started now
